# final_project

./: Direction.h
cpp_part/: CMakeLists.txt  LineObject.h  Objects.h  Player.cpp  Player.h  Point.h  Wall.h  global_const.h  main.cpp  map.cpp  map.h  readme.md
cpp_part/cmake_modules/: FindSFML.cmake
cpp_part/objects/: LineObject.h  Objects.h  Point.h  Wall.h
java_part/: build.gradle  readme.md
java_part/core/src/com/bmstu/game/: Enemy.java  Level.java  Object.java  PPMGame.java  Player.java
java_part/core/src/com/bmstu/game/managers/: GameScreenManager.java
java_part/core/src/com/bmstu/game/screens/: AbstractScreen.java  GameScreen.java
java_part/core/src/com/bmstu/game/utils/: B2DBodyBuilder.java  B2DConstants.java
java_part/desktop/: build.gradle
java_part/desktop/src/com/bmstu/game/: DesktopLauncher.java
